modify the algorithm to calculate the unmapped part cost

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "queue": "cpp",
         "istream": "cpp",
         "array": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "chrono": "cpp",
+        "algorithm": "cpp"
     }
 }
